--- a/style/style.css
+++ b/style/style.css
@@ -83,6 +83,7 @@ body {
     visibility: hidden;
 }
 .restart-button {
+    display: inline-block;
     border-radius: 10px;
     background-color: #fd003f;
     width: 150px;
@@ -91,7 +92,10 @@ body {
     line-height: 50px;
     text-transform: uppercase;
     text-align: center;
+    /* float: left; */
     color: #fff;
+    margin: 0 auto;
+    margin-left: 42%;
 }
 .flipping-animation {
 	-webkit-animation: flip-in-hor-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
